[package]
name = "sawit"
version = "0.1.0"
edition = "2024"
description = "A simple CLI tool to watch files and execute commands"
license = "MIT"
repository = "https://github.com/fepfitra/sawit"
keywords = ["cli", "watch", "automation", "notify"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "sawit"
path = "src/main.rs"

[[bin]]
name = "saw"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-suffix }"
pkg-fmt = "bin"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
notify = "8.2.0"
