[package]
name = "saw-it"
version = "0.1.11"
edition = "2024"
description = "A simple CLI tool to watch files and execute commands"
license = "MIT"
repository = "https://github.com/fepfitra/saw-it"
keywords = ["cli", "watch", "automation", "notify"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "saw"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/saw-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
notify = "8.2.0"
